[#4550] Prevent linebreak in damage enricher parentheses (#6769)
* [#4550] Prevent linebreak in damage enricher parentheses

- Wrap parenthesized formula in nowrap span when using average format
- Move parens from localization string into JS-generated HTML
- Add .formula-group CSS class to prevent line breaks within (formula)

Closes #4550

* Update lang/en.json


* Move formula-group wrapping into localization string

---------

--- a/less/v2/typography.less
+++ b/less/v2/typography.less
@@ -35,6 +35,7 @@
   }
 
   a.roll-link-group:hover { text-shadow: none; }
+  .formula-group { white-space: nowrap; }
 
   a.enricher-action {
     text-decoration: none;
